--- a/Portfolio-FU/index.html
+++ b/Portfolio-FU/index.html
@@ -131,7 +131,7 @@
             
           </div>
           <div class="comp-card">
-            <img src="./img/42bangkok.jpg" alt="">
+            <img src="./img/42Bangkok.jpg" alt="">
             <div class="icon-circle"><i class="fa-solid fa-star"></i></div>
             <h2>Rising Star</h2>
             <a href="https://www.codekathon.com/" target="_blank">Hackathon</a><h3> 42Bangkok x CDG</h3>
